--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "vitest",
     "test:cov": "vitest run --coverage",
     "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
-    "test:e2e": "vitest run --config ./vitest.config.e2e.ts"
+    "test:e2e": "vitest run --config ./vitest.config.e2e.ts",
+    "test:e2e:watch": "vitest --config ./vitest.config.e2e.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -36,26 +37,28 @@
     "zod-validation-error": "^3.0.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@rocketseat/eslint-config": "^2.2.2",
-    "@faker-js/faker": "^8.4.1",
     "@swc/core": "^1.4.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
-    "eslint": "^8.57.0",
-    "prisma": "^5.10.2",
-    "source-map-support": "^0.5.21",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
     "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^1.3.1",
     "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "prisma": "^5.10.2",
+    "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3",
     "unplugin-swc": "^1.4.4",
     "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^1.3.1"
